--- a/node-image/node-image-config.yml
+++ b/node-image/node-image-config.yml
@@ -25,7 +25,7 @@ pipelines:
         configuration:
           dockerFileLocation: ./node-image
           dockerFileName: Dockerfile
-          dockerImageName: manishas.jfrog.io/docker-local/node_image
+          dockerImageName: manishas.jfrog.io:8082/docker-local/node_image
           dockerImageTag: ${run_number}
           inputResources:
             - name: repo_node_image
