--- a/node-image/node-image-config.yml
+++ b/node-image/node-image-config.yml
@@ -23,6 +23,7 @@ pipelines:
       - name: docker_build_node
         type: DockerBuild
         configuration:
+          affinityGroup: dockerGroup
           dockerFileLocation: ./node-image
           dockerFileName: Dockerfile
           dockerImageName: manishas.jfrog.io:8082/docker-local/node_image
@@ -35,6 +36,7 @@ pipelines:
       - name: docker_push_node
         type: DockerPush
         configuration:
+          affinityGroup: dockerGroup
           targetRepository: docker-local
           integrations:
             - name: demoArt
@@ -44,6 +46,7 @@ pipelines:
       - name: publish_build_info
         type: PublishBuildInfo
         configuration:
+          affinityGroup: dockerGroup
           inputSteps:
             - name: docker_push_node
           outputResources:
